force-app/main/default/objects/Known_Issue__kav/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>