force-app/main/default/objects/Known_Issue__kav/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>