force-app/main/default/objects/Known_Issue__kav/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>