force-app/main/default/objects/Known_Issue__kav/fields/Workaround_Temporary_Fix__c.field-meta.xml
<CustomField>
    <fullName>Workaround_Temporary_Fix__c</fullName>
    <label>Workaround/Temporary Fix</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>